minor fix: z-index bug on navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,9 @@
 .sticky + .content {
     padding-top: 60px;
 }
+.navbar{
+    z-index: 2;
+}
 .width-95{
     width: 95%!important;
 }
